--- a/pom.xml
+++ b/pom.xml
@@ -113,5 +113,15 @@
             <artifactId>spring-webflow</artifactId>
             <version>2.4.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.webflow</groupId>
+            <artifactId>spring-js</artifactId>
+            <version>2.4.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.webflow</groupId>
+            <artifactId>spring-js-resources</artifactId>
+            <version>2.4.0.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
